# Rover-DifferentialDrive-RoboticArm

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  frames_2026-07-10_01.17.02.gv
install/: local_setup.sh  setup.sh
install/bin_interface/include/bin_interface/bin_interface/msg/: rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/bin_interface/include/bin_interface/bin_interface/srv/: get_targets.h
install/bin_interface/share/bin_interface/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/bin_interface/share/bin_interface/cmake/: ament_cmake_export_libraries-extras.cmake  bin_interfaceConfig.cmake  bin_interface__rosidl_typesupport_cExport.cmake  bin_interface__rosidl_typesupport_cppExport-noconfig.cmake  bin_interface__rosidl_typesupport_introspection_cExport-noconfig.cmake  bin_interface__rosidl_typesupport_introspection_cppExport.cmake  export_bin_interface__rosidl_generator_cExport.cmake  export_bin_interface__rosidl_generator_pyExport-noconfig.cmake  rosidl_cmake-extras.cmake
install/bin_interface/share/bin_interface/rust/: Cargo.toml
install/bin_interface/share/bin_interface/rust/src/: srv.rs
install/bin_interface/share/bin_interface/srv/: GetTargets.idl  GetTargets.srv  GetTargets_Request.msg
install/bin_interfaces/include/bin_interfaces/bin_interfaces/msg/: rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h
install/bin_interfaces/share/ament_index/resource_index/rosidl_interfaces/: bin_interfaces
install/bin_interfaces/share/bin_interfaces/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/bin_interfaces/share/bin_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  bin_interfaces__rosidl_typesupport_cppExport.cmake  bin_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  bin_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  export_bin_interfaces__rosidl_generator_cExport-noconfig.cmake  export_bin_interfaces__rosidl_generator_pyExport.cmake  export_bin_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake
install/bin_interfaces/share/bin_interfaces/rust/: Cargo.toml
install/linkattacher_msgs/share/linkattacher_msgs/: local_setup.sh  package.ps1  package.sh
install/main_nodes/lib/main_nodes/: ArmManager  ArmPickup  RunNode  TravelPose  VisionNode  detectionNode  scan_objects_filter.py  scan_self_filter.py
install/main_nodes/share/main_nodes/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/main_nodes/share/main_nodes/cmake/: main_nodesConfig-version.cmake  main_nodesConfig.cmake
install/main_nodes/share/main_nodes/config/: ekf.yaml  nav2_params.yaml  slam_toolbox.yaml
install/main_nodes/share/main_nodes/environment/: ament_prefix_path.dsv  path.dsv
install/main_nodes/share/main_nodes/launch/: display.launch.py  gazebo.launch.py
install/main_nodes/share/main_nodes/rviz/: model.rviz  nav2_view.rviz
install/main_nodes/share/main_nodes/urdf/: arm.urdf.xacro  base.urdf.xacro  control.gazebo.xacro  robot.urdf.xacro
install/main_nodes/share/main_nodes/worlds/: world.sdf
install/moveit_config/share/moveit_config/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/moveit_config/share/moveit_config/cmake/: moveit_configConfig-version.cmake  moveit_configConfig.cmake
install/moveit_config/share/moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  mobiarm.ros2_control.xacro  mobiarm.srdf  mobiarm.urdf.xacro  moveit.rviz  moveit_controllers.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml  sensors_3d.yaml
install/moveit_config/share/moveit_config/environment/: ament_prefix_path.dsv  path.dsv
install/moveit_config/share/moveit_config/launch/: demo.launch.py  gazebo.launch.py  mission.launch.py  move_group.launch.py  moveit_rviz.launch.py  nav2_slam.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  travel_pose.launch.py  warehouse_db.launch.py
install/ros2_linkattacher/share/ros2_linkattacher/: local_setup.sh  package.ps1  package.sh
log/: latest_build
src/IFRA_LinkAttacher/ros2_LinkAttacher/: package.xml
src/bin_interfaces/: CMakeLists.txt
src/bin_interfaces/srv/: StartSearch.srv
src/main_nodes/: CMakeLists.txt  package.xml
src/main_nodes/config/: ekf.yaml  nav2_params.yaml  ros2_controllers.yaml  slam_toolbox.yaml
src/main_nodes/rviz/: model.rviz  nav2_view.rviz
src/main_nodes/scripts/: scan_objects_filter.py  scan_self_filter.py
src/main_nodes/src/: ArmManager.cpp  ArmPickup.cpp  RunNode.cpp  TravelPose.cpp  VisionNode.cpp  detectionNode.cpp
src/main_nodes/urdf/: arm.urdf.xacro  base.urdf.xacro  robot.urdf.xacro
src/main_nodes/worlds/: world.sdf
src/moveit_config/: .setup_assistant  package.xml
src/moveit_config/config/: initial_positions.yaml  mobiarm.srdf  mobiarm.urdf.xacro  moveit_controllers.yaml
src/moveit_config/launch/: demo.launch.py  gazebo.launch.py  mission.launch.py  move_group.launch.py  nav2_slam.launch.py  spawn_controllers.launch.py
(+44 files in other folders)
